--- a/README.yaml
+++ b/README.yaml
@@ -7,6 +7,17 @@
 # Name of this project
 name: terraform-aws-s3-log-storage
 
+# Tags of this project
+tags:
+  - aws
+  - terraform
+  - logging
+  - s3
+
+# Categories of this project
+categories:
+  - terraform-logging
+
 # Logo for this project
 #logo: docs/logo.png
 
