Update readme yaml file (#13)
* doc: update readme yaml file
- add tags and categories

* feature: update readme yaml and rebuild readme md

--- a/README.yaml
+++ b/README.yaml
@@ -7,6 +7,25 @@
 # Name of this project
 name: terraform-aws-s3-log-storage
 
+# Tags of this project
+tags:
+  - aws
+  - terraform
+  - terraform-modules
+  - logging
+  - s3
+  - bucket
+  - logs
+  - storage
+  - glacier
+  - standard
+  - lifecycle-management
+  - versioning
+
+# Categories of this project
+categories:
+  - terraform-modules/logging
+
 # Logo for this project
 #logo: docs/logo.png
 
