Add pecigonzalo to contrib

--- a/README.yaml
+++ b/README.yaml
@@ -103,3 +103,5 @@ contributors:
     github: "aknysh"
   - name: "Vladimir"
     github: "SweetOps"
+  - name: "Gonzalo Peci"
+    github: "pecigonzalo"
