Refactor to use s3-bucket module, update in general

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,7 +4,7 @@
     ":preserveSemverRanges"
   ],
   "labels": ["auto-update"],
-  "enabledManagers": ["terraform"],
+  "enabledManagers": [],
   "terraform": {
     "ignorePaths": ["**/context.tf", "examples/**"]
   }
