--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,12 @@
 {
-  "enabled": false
+  "extends": [
+    "config:base",
+    ":preserveSemverRanges"
+  ],
+  "labels": ["auto-update"],
+  "enabledManagers": ["terraform"],
+  "terraform": {
+    "ignorePaths": ["**/context.tf", "examples/**"]
+  }
 }
+
