chore: Replace Makefile with atmos.yaml

--- a/README.yaml
+++ b/README.yaml
@@ -25,7 +25,7 @@ badges:
     url: https://github.com/cloudposse/terraform-aws-s3-log-storage/commits
   - name: Slack Community
     image: https://slack.cloudposse.com/for-the-badge.svg
-    url: https://slack.cloudposse.com
+    url: https://cloudposse.com/slack
 
 # List any related terraform modules that this module may be used with or that this module depends on.
 related:
@@ -119,7 +119,5 @@ usage: |2-
 
   ```
 
-include:
-  - docs/targets.md
-  - docs/terraform.md
+include: []
 contributors: []
